--- a/_2017_pages/venue.html
+++ b/_2017_pages/venue.html
@@ -1,6 +1,6 @@
 ---
 layout: 2017_default
-permalink: /venue
+permalink: /SinoUK2022/venue
 title: Venue
 published: true
 ---
@@ -15,7 +15,7 @@ published: true
       <p>Date<br>Venue</p>
 
     <div class="venue-map">
-      <iframe src="https://www.google.com/maps/embed/v1/place?key=YOUR_API_KEY&q=Space+Needle,Seattle+WA" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed/v1/place?q=College%20Court%20Leicester%20UK&key=AIzaSyB6gFLxJ2iXLupcZxIGJqSLkXqG6HVu4BY" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
       <p>Info</p>
