--- a/_2017_pages/booklet.html
+++ b/_2017_pages/booklet.html
@@ -1,6 +1,7 @@
 ---
 layout: 2017_pdf
-permalink: /SinoUK2022/booklet
+permalink: /booklet
+<!--for local test, set permalink: /SinoUK2022/booklet -->
 title: "Event Booklet"
 published: true
 ---
