--- a/_2017_pages/team.html
+++ b/_2017_pages/team.html
@@ -1,6 +1,7 @@
 ---
 layout: 2017_default
-permalink: /SinoUK2022/team
+permalink: /team
+<!--for local test, set permalink: /SinoUK2022/team -->
 title: Team Member
 ---
 
