--- a/_2017_pages/agenda.html
+++ b/_2017_pages/agenda.html
@@ -1,6 +1,7 @@
 ---
 layout: 2017_default
 permalink: /agenda
+<!--for local test, set permalink: /SinoUK2022/agenda -->
 title: Agenda
 published: true
 ---
