--- a/_2017_pages/faqs.html
+++ b/_2017_pages/faqs.html
@@ -1,6 +1,7 @@
 ---
 layout: 2017_default
-permalink: /SinoUK2022/faqs
+permalink: /faqs
+<!--for local test, set permalink: /SinoUK2022/faqs -->
 title: Frequently Asked Questions (FAQ)
 published: true
 ---
