--- a/_2017_pages/register.html
+++ b/_2017_pages/register.html
@@ -1,6 +1,7 @@
 ---
 layout: 2017_default
 permalink: /register
+<!--for local test, set permalink: /SinoUK2022/register -->
 title: Register
 ---
     <script type="text/javascript">
