--- a/_2017_pages/venue.html
+++ b/_2017_pages/venue.html
@@ -1,6 +1,8 @@
 ---
 layout: 2017_default
-permalink: /SinoUK2022/venue
+permalink: /venue
+<!--for local test, set permalink: /SinoUK2022/venue -->
+
 title: Venue
 published: true
 ---
