--- a/_2017_pages/venue.html
+++ b/_2017_pages/venue.html
@@ -14,15 +14,15 @@ published: true
     <div class="event black-frame">
       <h1>{{ page.title }}</h1>
 
-      <p>Date<br>Venue</p>
+      <p>Friday, 09/12/2022<br>College Court, Leicester, UK</p>
 
     <div class="venue-map">
       <iframe src="https://www.google.com/maps/embed/v1/place?q=College%20Court%20Leicester%20UK&key=AIzaSyB6gFLxJ2iXLupcZxIGJqSLkXqG6HVu4BY" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
-      <p>Info</p>
+      <p>AIDAM Winter AI Workshop</p>
 
-      <p>Address</p>
+      <p>Knighton Rd, Knighton, Leicester LE2 3UF</p>
 
-      <p>Location</p>
+      <p>College Court, Leicester, UK</p>
     </div>
