--- a/_2017_pages/faqs.html
+++ b/_2017_pages/faqs.html
@@ -2,7 +2,7 @@
 layout: 2017_default
 permalink: /faqs
 <!--for local test, set permalink: /SinoUK2022/faqs -->
-title: Frequently Asked Questions (FAQ)
+title: Poster List
 published: true
 ---
     <!--background color-->
@@ -13,7 +13,7 @@ published: true
     <div class="event black-frame">
       <h1 class="title">{{ page.title }}</h1>
 
-      <p>Below is a list of Frequently Asked Questions (FAQ).<p>
+      <p>Below is a list of selected posters.<p>
         <ol>
             {% for faq in site.data.twenty_17.faqs %}
                 <li><b>{{ faq.question }}</b>
