--- a/_2017_pages/faqs.html
+++ b/_2017_pages/faqs.html
@@ -22,7 +22,8 @@ published: true
             {% endfor %}
         </ol>
         <p>
-            For further enquiries, kindly submit your question via the <a href="/#contacts">contact us</a> 
-            page or send us an email at <a href="mailto:hello.world@gmail.com">hello.world@gmail.com</a> 
+            Online versions will be available soon.
+            For your interests, register the workshop and meet the keynote speakers and poster authors in person!
+            For further poster enquiries, kindly send us an email at <a href="mailto:gx21@leicester.ac.uk">gx21@leicester.ac.uk</a> 
         </p>
     </div>
