--- a/_2017_pages/faqs.html
+++ b/_2017_pages/faqs.html
@@ -18,6 +18,7 @@ published: true
             {% for faq in site.data.twenty_17.faqs %}
                 <li><b>{{ faq.question }}</b>
                     <br>{{ faq.answer }}<br><br>
+                    <br><a href = {{ faq.link }}>Online Poster</a><br><br>
                 </li>
             {% endfor %}
         </ol>
