--- a/_2017_pages/booklet.html
+++ b/_2017_pages/booklet.html
@@ -2,11 +2,11 @@
 layout: 2017_pdf
 permalink: /booklet
 <!--for local test, set permalink: /SinoUK2022/booklet -->
-title: "Event Booklet"
+title: "Lunch Menu"
 published: true
 ---
 <script type="text/javascript">
     document.write ('<body style="padding-bottom:0px;">')
 </script>
 
-<iframe src="https://drive.google.com/file/d/1XiFmTdq8bpI_pOBr9L7qSK4l8SadYKk3/view?usp=share_link" style="height:100vh;width:100vw;"></iframe>
+<iframe src="https://drive.google.com/file/d/1yummkSs0B2kWf8zVIxvs9WmFrfG7DnXU/view?usp=share_link" style="height:100vh;width:100vw;"></iframe>
